--- a/personas_django/sap/webapp/templates/bienvenido.html
+++ b/personas_django/sap/webapp/templates/bienvenido.html
@@ -20,6 +20,7 @@
         <th>Email</th>
         <th></th>
         <th></th>
+        <th></th>
         </thead>
         <tbody>
         {% for persona in personas %}
@@ -29,10 +30,14 @@
             <td>{{persona.email}}</td>
             <td><a href="detalle_persona/{{persona.id}}">Ver</a></td>
             <td><a href="editar_persona/{{persona.id}}">Editar</a></td>
+            <td><a href="eliminar_persona/{{persona.id}}">Eliminar</a></td>
         </tr>
         {% endfor %}
         </tbody>
     </table>
+</div>
+<div class="mt-2">
+    <a href="{% url 'cat_domicilios' %}">Ir a Catálogo de Domicilios</a>
 </div>
 </body>
 </html>
